NetBSD Problem Report #51563

From www@NetBSD.org  Wed Oct 19 19:31:28 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id A54667A140
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 19 Oct 2016 19:31:28 +0000 (UTC)
Message-Id: <20161019193127.A5F5C7A2D5@mollari.NetBSD.org>
Date: Wed, 19 Oct 2016 19:31:27 +0000 (UTC)
From: rokuyama@rk.phys.keio.ac.jp
Reply-To: rokuyama@rk.phys.keio.ac.jp
To: gnats-bugs@NetBSD.org
Subject: ERLITE reboots immediately when it halts
X-Send-Pr-Version: www-1.0

>Number:         51563
>Category:       port-evbmips
>Synopsis:       ERLITE reboots immediately when it halts
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-evbmips-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Oct 19 19:35:00 +0000 2016
>Closed-Date:    Thu Oct 20 07:26:49 +0000 2016
>Last-Modified:  Thu Oct 20 07:30:00 +0000 2016
>Originator:     Rin Okuyama
>Release:        7.99.39
>Organization:
Faculty of Science and Technology, Keio University
>Environment:
NetBSD erlite 7.99.39 NetBSD 7.99.39 (ERLITE_RO) #1: Thu Oct 20 03:48:18 JST 2016  rin@xxx:xxx evbmips
>Description:
When we halt ERLITE, it says "Press any key to reboot", but it
immediately reboots instead of waiting key input.
>How-To-Repeat:
Do halt ERLITE.
>Fix:
Poll and getc from console in the same manner to other boards.

--- src/sys/arch/evbmips/cavium/machdep.c.orig	2016-10-20 03:43:50.808605975 +0900
+++ src/sys/arch/evbmips/cavium/machdep.c	2016-10-20 03:47:14.595360479 +0900
@@ -448,6 +448,9 @@
 		printf("\n");
 		printf("The operating system has halted.\n");
 		printf("Please press any key to reboot.\n\n");
+		cnpollc(1);	/* For proper keyboard command handling */
+		cngetc();
+		cnpollc(0);
 	}

 	printf("%s\n\n", ((howto & RB_HALT) != 0) ? "halted." : "rebooting...");

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Thu, 20 Oct 2016 07:26:49 +0000
State-Changed-Why:
Commited, thanks!


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51563 CVS commit: src/sys/arch/evbmips/cavium
Date: Thu, 20 Oct 2016 07:26:04 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Thu Oct 20 07:26:03 UTC 2016

 Modified Files:
 	src/sys/arch/evbmips/cavium: machdep.c

 Log Message:
 Rin Okuyama in PR port-evbmips/51563: wait for console input after halting
 the machine.


 To generate a diff of this commit:
 cvs rdiff -u -r1.7 -r1.8 src/sys/arch/evbmips/cavium/machdep.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.