Rin Okuyama in PR port-evbmips/51563: wait for console input after halting the machine.